@@ -1,5 +1,9 @@
 # $Id$
 
+2008-08-07	Ivan Y. Khvostishkov
+
+	* meta/types/HttpUrlType.class.php: new internal type implemented.
+
 2008-08-07	Konstantin V. Arkhipov
 
 	* 1.0.6 released.
